Fix connect button layout bug.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -48,15 +48,13 @@
 
 .stripeContainer .btn.connect {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  left: 50%;
 
   margin: auto;
-  width: 158px;
-  height: 30px;
-  background-color: white;
+
+  background-color: rgba(255, 255, 255, 0.91);
   pointer-events: all;
 }
 
